# rush

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  build.rs  docker-compose.yml
.github/workflows/: release.yml
migrations/: 20220509150516_questions_table.up.sql  20220514145724_answers_table.up.sql  20220523174842_create_accounts_table.up.sql  20220523175814_extend_questions_table.down.sql  20220523175814_extend_questions_table.up.sql  20220523175821_extend_answers_table.down.sql  20220523175821_extend_answers_table.up.sql
src/: config.rs  errors.rs  lib.rs  main.rs  profanity.rs  repositories.rs  server.rs  store.rs  stores.rs
src/repositories/: memory_repository.rs  postgres_repository.rs  repository.rs
src/routes/: answer.rs  authentication.rs  mod.rs  question.rs
src/server/: services.rs
src/server/repositories/: memory_repository.rs  postgres_repository.rs  repository.rs
src/server/routes/: answer.rs  authentication.rs  question.rs
src/server/services/: google_ai_service.rs
src/services/: google_ai_service.rs
src/shared/: errors.rs
src/stores/: memory_store.rs  postgres_store.rs
src/types/: pagination.rs  question.rs
