[package]
name = "rush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
warp = "0.3.6"
uuid = { version = "1.7.0", features = ["v7"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "migrate", "postgres"] }
reqwest = { version = "0.11.24", features = ["json"] }
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
rand = "0.8.5"
argon2 = "0.5.3"
chrono = "0.4.34"
paseto = "2.0.2"
dotenv = "0.15.0"
clap = { version = "4.5.1", features = ["derive"] }
openssl = { version = "0.10.64", features = ["vendored"] }
